[package]
name = "nemo-proxy"
version = "0.1.0"
authors = ["zdunecki <zdunekhere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
unicase = "2.6.0"
clap = "2.33.3"
